# tuxedo-rs_mod

./: .release-please-manifest.json
.github/workflows/: ubuntu-build.yml
tailor_api/: CHANGELOG.md
tailor_cli/: CHANGELOG.md  Cargo.toml
tailor_gui/: Cargo.toml
tailor_gui/examples/: auto_switch_demo.rs  keyboard_demo.rs  monitor_demo.rs  profile_application_demo.rs
tailor_gui/src/: daemon_manager.rs  fan_daemon.rs  hardware_control.rs  hardware_monitor.rs  improved_hardware_monitor.rs  keyboard_control.rs  main.rs  profile_controller.rs  profile_system.rs  single_instance.rs  tray_manager.rs
tailor_gui/src/src/ui/: settings_page.rs
tailor_gui/src/ui/: improved_statistics_page.rs  main_window.rs  mod.rs  profile_page.rs  settings_page.rs  statistics_page.rs  tuning_page.rs
tailor_gui/ui/: mod.rs
tailor_hwcaps/: CHANGELOG.md
tailord/: CHANGELOG.md
tuxedo_ioctl/: CHANGELOG.md
tuxedo_sysfs/: CHANGELOG.md
