[package]
name = "tailor_gui"
version = "0.3.0"
authors = ["weter11"]
edition = "2021"
publish = false
description = "Tailord GUI (part of tuxedo-rs)"
repository = "https://github.com/weter11/tuxedo-rs_mod"

[dependencies]
futures = "0.3.31"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.20.2"
relm4-components = "0.9"
relm4 = { version = "0.9", features = ["libadwaita", "gnome_45"] }
tailor_api = { version = "0.2.5", path = "../tailor_api" }
tailor_client = { version = "0.2.5", path = "../tailor_client" }
tokio = { version = "1.41", features = ["parking_lot"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracker = "0.2"
relm4-icons = "0.9"
clap = { version = "4.5.20", features = ["derive"] }

# Add these lines to fix the "unresolved crate" errors:
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7" }

# Phase 1 & 2 dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
